search bar now has a clear button and no longer zooms in on mobile

--- a/react-frontend/src/styles/JournalWall/Note.module.css
+++ b/react-frontend/src/styles/JournalWall/Note.module.css
@@ -118,6 +118,7 @@
     opacity: 0;
     transition: .75s ease;
     overflow: hidden;
+    pointer-events: none;
 }
 
 .mainNote:hover .connectionWallInfo, .stickyNote:hover .connectionWallInfo {
